umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_1_3_dichloroallene.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C2
order: 2
equivalence_sets:
  - - C(0)
  - - C(1)
    - C(2)
  - - Cl(3)
    - Cl(4)
  - - H(5)
    - H(6)
