umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_acetonitrile.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C3v
order: 6
equivalence_sets:
  - - C(0)
  - - C(1)
  - - N(2)
  - - H(3)
    - H(4)
    - H(5)
