umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_acrolein.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Cs
order: 2
equivalence_sets:
  - - C(0)
  - - C(1)
  - - C(2)
  - - O(3)
  - - H(4)
  - - H(5)
  - - H(6)
  - - H(7)
