umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_al.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D4h
order: 16
equivalence_sets:
  - - Al(0)
    - Al(1)
    - Al(2)
    - Al(3)
