umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_allene.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D2d
order: 8
equivalence_sets:
  - - C(0)
  - - C(1)
    - H(2)
  - - H(3)
    - C(4)
    - H(5)
    - H(6)
