umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_b.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Ih
order: 120
equivalence_sets:
  - - B(0)
    - B(1)
    - B(2)
    - B(3)
    - B(4)
    - B(5)
    - B(6)
    - B(7)
    - B(8)
    - B(9)
    - B(10)
    - B(11)
  - - H(12)
    - H(13)
    - H(14)
    - H(15)
    - H(16)
    - H(17)
    - H(18)
    - H(19)
    - H(20)
    - H(21)
    - H(22)
    - H(23)
